--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
         "spatie/laravel-medialibrary": "^11.14",
-        "spatie/laravel-permission": "^6.21"
+        "spatie/laravel-permission": "^6.21",
+        "yajra/laravel-datatables-oracle": "12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
