--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/ui": "^4.6",
         "spatie/laravel-medialibrary": "^11.14",
         "spatie/laravel-permission": "^6.21",
+        "tightenco/ziggy": "^2.6",
         "yajra/laravel-datatables-oracle": "12.0"
     },
     "require-dev": {
